[package]
name = "nekokan_music_wa"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
gloo-utils = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", "HtmlOptionElement", "HtmlButtonElement", "NodeList", "Url", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
