[package]
name = "nekokan_music_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nekokan_music_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
